# CV-Analyzer

./: .tmp_msg.txt  Dockerfile  Dockerfile.py  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
.meta/: commit_marker_2026-06-01.txt  commit_marker_2026-06-02.txt  commit_marker_2026-06-03.txt  commit_marker_2026-06-04.txt  commit_marker_2026-06-05.txt  commit_marker_2026-06-06.txt  commit_marker_2026-06-07.txt  commit_marker_2026-06-08.txt  commit_marker_2026-06-09.txt  commit_marker_2026-06-10.txt  commit_marker_2026-06-11.txt  commit_marker_2026-06-12.txt  commit_marker_2026-06-13.txt  commit_marker_2026-06-14.txt  commit_marker_2026-06-15.txt  commit_marker_2026-06-16.txt  commit_marker_2026-06-17.txt  commit_marker_2026-06-18.txt  commit_marker_2026-06-19.txt  commit_marker_2026-06-20.txt  commit_marker_2026-06-21.txt  commit_marker_2026-06-22.txt
artifacts/: metrics.json  pair_clf.joblib  tfidf_char.joblib  tfidf_word.joblib
data/: cv_examples.json  jd_examples.json  skill_ner_data.json  training_samples_10k.json
templates/: index.html
train/: train_from_scratch.py
